test/parsing/pass/int_comparison_boolean.j
class A {
  Void main() {
    return false || 5 > 6;
  }
}
