test/parsing/fail/if_empty_consequent.j
class A {
  Void main() {
    if (2 == 1) {
    } else {
      return;
    }
  }
}
